subselected data to only diagnostic questions, cleaned up other code

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ data_clean/questions/US/dev.jsonl
 data_clean/questions/US/test.jsonl
 data_clean/questions/US/train.jsonl
 test.ipynb
+LLM_utils_2.py
+select_data.py
+data_with_diag_question.json
